...
    </androidx.appcompat.widget.Toolbar>



    <!-- Search Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_view"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deezerMainToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint_dz"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:minHeight="48dp"
...
